# CPP_Primer_Plus_Study

./: .gitignore  CMakeLists.txt  README.md
Chapter10/: 构造函数.cpp  析构函数.cpp  类演示.cpp  类演示.h
Chapter10/Source/: 不同方法返回this.cpp  构造函数.cpp  类演示.cpp
Chapter11/: 类的自动转换和强制转换.cpp  类的自动转换和强制转换.h  运算符重载.cpp
Chapter11/Header/: 运算符重载.h
Chapter11/Source/: 友元.cpp  类的自动转换和强制转换.cpp  运算符重载.cpp
Chapter11/data/: savedata.txt
Chapter12/Header/: return_val.h  复制构造函数.h  静态成员类.h
Chapter12/Source/: 关于返回对象的说明.cpp  再谈new定位.cpp  复制构造函数.cpp  指向对象的指针.cpp  赋值运算符.cpp  静态成员类.cpp
Chapter13/: protected关键字的使用.cpp  一个简单基类的使用.cpp  一个简单的基类.cpp  一个简单的基类.h  动态内存分配和友元继承demo.cpp  动态内存分配和友元继承demo.h  多态公有继承.cpp  多态公有继承.h  抽象基类.cpp  抽象基类.h  抽象基类_main.cpp  隐式向下转换.cpp
Chapter14/: has_a关系类设计.cpp  has_a关系类设计.h  使用using重新定义访问权限.cpp  使用多个类型参数.cpp  成员模版.cpp  成员模版.h  数组模版.cpp  数组模版.h  模版作为参数.cpp  模版作为参数.h  模版类和友元.cpp  模版类和友元.h  私有继承实现has-a关系.cpp  私有继承实现has-a关系.h  类模版.cpp  部分具体化.cpp  限制模版友元函数.h  非限制模版友元函数.h
Chapter14/MI/: 多重继承.cpp  多重继承.h  多重继承带来的问题.h  虚基类解决MI冗余问题.h
Chapter14/保护继承/: 保护继承.cpp  保护继承.h  基类.h  私有继承和保护继承的区别.h
Chapter15/: dynamic_cast类的转换.cpp  typeid的使用.cpp  创建自己的异常类.cpp  异常处理.cpp  异常处理.h  异常的再抛出.cpp  异常的再抛出.h  捕获非标准的异常.cpp  类型转换.cpp
Chapter16/: initializer_list的使用.cpp  initializer_list的使用.h  string1.cpp  函数对象.cpp  函数对象.h  向量模板的使用.cpp  智能指针.cpp  自适应生成器.cpp  迭代器的使用.cpp
Chapter16/data/: tobuy.txt
Chapter17/: cin的一些操作方法.cpp  cout输出格式的控制.cpp  ostream其他方法.cpp  ostream其他方法.h  二进制文件IO.cpp  文件简单IO.cpp
Chapter17/data/: jar.txt
Chapter18/: lambda函数.cpp  prohibited_func.h  包装器.cpp  包装器.h  可变参数模版.cpp  右值引用.cpp  委托构造函数.cpp  禁止类的一些构造方法.cpp  继承构造函数.cpp  继承构造函数.h
Chapter2/Source/: helloworld.cpp
Chapter3/Source/: auto变量.cpp  cout的put方法.cpp  不同进制下的int表示.cpp  关于数的限制.cpp  强制转换.cpp  浮点数的限制.cpp
Chapter4/Source/: array.cpp  new分配内存.cpp  new创建动态数组.cpp  string的使用.cpp  vector模版.cpp  位字段.cpp  原生字符串.cpp  字符串获取存在的问题.cpp  指针数组.cpp  数组.cpp  枚举.cpp  混合输入数字和字符串导致的问题.cpp  结构.cpp  读取一行.cpp
Chapter5/Source/: 2D_array.cpp  单个字符循环读取.cpp  基于范围的for循环.cpp  字符串比较的不同.cpp  时间单位的使用.cpp  表达式和语句.cpp  运算符和指针.cpp  逗号表达式.cpp
Chapter6/Source/: cctype字符串库.cpp  switch和enum搭配.cpp  写到文本文件中.cpp  处理错误输入.cpp  文件处理函数.cpp  读取文本文件.cpp
Chapter6/data/: fish.txt
Chapter7/Header/: funPointer.h
Chapter7/Source/: vector作为函数参数.cpp  使用数组区间的函数.cpp  函数和二维数组.cpp  函数指针.cpp  字符串作为函数参数.cpp  字符串作为函数的返回值.cpp  结构作为函数参数.cpp
Chapter8/Header/: swaps.h
Chapter8/Source/: swaps.cpp  内联函数.cpp  函数模版.cpp  函数重载.cpp  引用变量.cpp  引用用于结构体.cpp  模版实例化和具体化.cpp  模版重载.cpp  返回引用的函数.cpp
Chapter9/: external.cpp  new补充.cpp  support.cpp  命名空间.cpp  外部链接需要注意的问题.cpp  无链接性的局部变量.cpp  辅助文件.cpp
Chapter9/语言链接性/: link_C.c  link_C.h  main.cpp
